remove multi project